fixed issue with staff name and title gap on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -37,10 +37,6 @@ p {
         font-size: 20px;
         line-height: 1.6;
     }
-    .person-name{
-
-      margin: 0 0 0px !important;
-    }
 }
 
 textarea{
@@ -105,18 +101,7 @@ a:focus {
       background: rgba(255,255,255,.1);  }
 
   }
-
-.person-name{
-
-  margin: 0 0 0px !important;
-}
-
-.person-title{
-
-  font-size: 16px;
-
-}
-
+  
 .copyright{
 
   padding-top: 25px;
